--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,8 @@ dependencies = [
     "fastapi==0.103.1",
     "uvicorn[standard]==0.23.2",
     "requests==2.31.0",
-    "numpy==1.24.3",
+    "numpy>=1.26", 
     "pandas==2.0.3",
     "textblob==0.17.1",
     "python-multipart==0.0.6",
-    "asyncio==3.4.3", 
 ]
