--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,8 @@ dependencies = [
     "fastapi==0.103.1",
     "uvicorn[standard]==0.23.2",
     "requests==2.31.0",
-    "numpy>=1.26", 
-    "pandas==2.0.3",
+    "numpy>=1.26",  
+    "pandas>=2.2.2",  
     "textblob==0.17.1",
     "python-multipart==0.0.6",
 ]
